# software-engineering-agents

./: .env.example  .gitignore  CNAME  README.md  index.html  main.py  multi_bot_main.py  pyproject.toml  requirements.txt
config/: settings.py
core/: README.md  architect_bot.py  bot.py  data_analyst_bot.py  developer_bot.py  main_dispatcher_bot.py  observability.py  sandbox.py  sentry_bot.py  workflows.py
core/integrations/: github_client.py  linear_client.py  llm_client.py  rag_client.py  sentry_client.py
data/code_markdown/: README.md
data/docs_markdown/: Action_Required_for_Expired_Refresh_Tokens.md  Agent_Framework.md  Announcements.md  Aptos_Wallet.md  CUDA_Toolkit.md  Co-staking.md  Coin_Restrictions.md  Collaborative_Staking_(Co-Staking).md  Deleting,_Unstaking_&_Withdrawing.md  Deploy_Bare_Metal_On_Demand_Cluster.md  Deploy_CaaS.md  Deploy_Mega-Ray_Cluster.md  Deploy_Ray_Cluster.md  Device_Onboarding.md  Device_Reliability_Score.md  Device_Utilization_Threshold.md  Earnings_&_Rewards.md  Exploring_AI_Agents.md  Exploring_AI_Models.md  Get_Started.md  Get_Started:_Sign_Up_and_Log_In_to_io.net.md  Home.md  How_to_Stake.md  IO_Cloud_Payments.md  IO_Coin.md  IO_Intelligence.md  IO_Staking.md  IO_Tokenomics.md  IO_Worker.md  Jump_to_Content.md  MacOS:_Install_Docker.md  MacOS:_Install_Worker.md  MacOs:_Troubleshoot_Docker.md  Manage,_Monitor,_&_FAQs.md  Manage_Clusters.md  Optimize_PCIe_Lane_Configuration.md  Protecting_your_Stake.md  Retrieval_Engine.md  Rewards_&_Wallets.md  Run_Jobs_on_Clusters.md  (+6 more)
data/markdown/: API_Reference.md  Agentic_Workflow_Editor.md  Create_a_Co-staking_Offer.md  Deploy_Cluster_and_Pay.md  Device_Block_Reward_Multiplier.md  Device_Owner_Staking.md  Extending_Your_Cluster_and_Pay.md  FAQ.md  Guides.md  IO_Cloud.md  IO_Coin_Allocation.md  IO_Credits.md  Intro.md  MacOS:_Troubleshoot_Worker.md  Monitor_Block_Rewards.md  Monthly_Token_Emission_Schedule.md  Proof_of_Work.md  Quick_Start_Guide.md  Start_Using_IO_Cloud.md  Supported_Devices.md  Unstake_and_Withdraw_$IO.md  View_Co-Staking_Device.md  Windows:_Install_Docker.md  Windows:_Install_Worker.md  Windows:_Troubleshoot_Docker.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentCard.tsx  CodeBlock.tsx  FeatureCard.tsx  MermaidDiagram.tsx  WorkflowSection.tsx
models/: schemas.py
rag/: README.md
rag/docs_rag/: docs_store.py
rag/indexer/: embedder.py  indexer.py  r2r_indexer.py  rag_core.py
rag/multimedia_rag/: audio_transcriper.py  video_rag.py
rag/sql_rag/: qdrant_vector_store.py  r2r_vector_store.py
rag/web_crawler/: scraper.py  scraper2.py
services/: __init__.py  approval_system.py  pr_comment_handler.py  pr_creator.py  pr_reviewer.py
services/architect/: README.md  agent.py  models.py  prompts.py  service.py  slack_integration.py  tools.py
services/copilot/: router.py
services/data_support/: README.md  data_rag.py
services/data_support/tools/sql/: block_rewards.yaml
services/developer/: README.md  code_analyzer.py  pr_comment_handler.py  pr_creator.py  sentry_debugger.py
slack_setup/: README.md
slack_setup/mainfests/: architect.json  data-analyst.json  developer.json  manager.json  prod-support.json
utils/: opik_tracer.py  slack_response_helpers.py
