[project]
name = "agent-team"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.4.0",
    "alembic==1.16.3",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncio==3.4.3",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "boto3-stubs==1.39.4",
    "botocore-stubs==1.38.46",
    "bs4>=0.0.2",
    "certifi==2025.7.9",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "choreographer==1.0.9",
    "click==8.2.1",
    "crawl4ai>=0.7.1",
    "cryptography==45.0.5",
    "dbos==1.7.0",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "docker==7.1.0",
    "email-validator==2.2.0",
    "fastapi==0.115.14",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.2",
    "fastembed>=0.7.1",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flasgger==0.9.7.1",
    "flask==3.1.1",
    "flask-sock==0.7.0",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "googleapis-common-protos==1.70.0",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.33.2",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpickle==4.1.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kaleido==1.0.0",
    "langchain-openai>=0.3.28",
    "litellm==1.74.0.post1",
    "load-dotenv>=0.1.0",
    "logistro==1.1.0",
    "mako==1.3.10",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "multidict==6.6.3",
    "mypy-boto3-bedrock-runtime==1.39.0",
    "narwhals==1.47.0",
    "nltk>=3.9.1",
    "numpy==2.3.1",
    "openai==1.93.3",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-http==1.34.1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "opik==1.8.1",
    "orjson==3.11.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "plotly==6.2.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "qdrant-client==1.14.1",
    "r2r==3.6.5",
    "rapidfuzz==3.13.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rich==14.0.0",
    "rich-toolkit==0.14.8",
    "rignore==0.5.1",
    "rpds-py==0.26.0",
    "sentence-transformers>=5.0.0",
    "sentry-sdk==2.32.0",
    "shellingham==1.5.4",
    "simple-websocket==1.1.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "slack-bolt==1.23.0",
    "slack-sdk==3.35.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sqlparse==0.5.3",
    "starlette==0.46.2",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tiktoken==0.8.0",
    "tokenizers==0.21.2",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "types-aiofiles==24.1.0.20250708",
    "types-awscrt==0.27.4",
    "types-requests==2.32.4.20250611",
    "types-s3transfer==0.13.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uuid6==2025.0.1",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "vanna==0.7.9",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "yarl==1.20.1",
    "zipp==3.23.0",
    "pydantic-ai>=0.0.14",
    "markdown>=3.8.2",
    "whisperx>=3.4.2",
    "pixeltable>=0.4.4",
    "spacy>=3.8.7",
]
